--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "gulp": "^4.0.2",
+    "jquery": "^3.6.0",
     "natives": "^1.1.6",
+    "prop-types": "^15.8.1",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
@@ -17,6 +20,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-yandex-maps": "^4.6.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "semantic-ui-css": "^2.4.1",
