--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -16,7 +17,9 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
+    "react-google-recaptcha": "^2.1.0",
     "react-intl": "^2.8.0",
+    "react-owl-carousel": "^2.3.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
@@ -24,7 +27,7 @@
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.4",
+    "semantic-ui-react": "^2.1.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
